fix checkstyle and code format